--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="pt-BR">
 
 <head>
@@ -66,7 +66,7 @@
                     />
                 </li>
 
-                <li class="personagem" id="Wolverine" data-name="Wolverine"
+                <li class="personagem" id="wolverine" data-name="Wolverine"
                 data-description="Poderes. Garras Metálicas. Fator de Cura Regenerativo, Super Agilidade">
                     <img src="./src/imagens/card-wolverine.jpg" alt="Personagem Wolverine"
                     />
